--- a/src/views/pages/media/MediaPage.module.scss
+++ b/src/views/pages/media/MediaPage.module.scss
@@ -3,7 +3,8 @@
 	aspect-ratio: 1/1;
 	display: flex;
 
-	&:hover {
+	&:hover,
+	&.active {
 		.controls {
 			visibility: visible;
 			backdrop-filter: blur(2px);
